--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,8 @@
 spring:
   servlet:
+    encoding:
+      charset: UTF-8
+      force: true
     multipart:
       enabled: true
       location: D:/upload/
